remove weird character

--- a/en/tools-of-change/feedback/index.html
+++ b/en/tools-of-change/feedback/index.html
@@ -78,7 +78,7 @@ theForm.elements[i].checked = status;
 <div id="header">
 <h1 id="logo" style="	background:transparent url(../../../public/images/logo_en.gif) no-repeat 0 0;">
 <a href="../../../en/home/" title="Tools of Change - Home">Tools- of Change</a>s
-					
+
 					</h1>
 <div id="qnav">
 <ul id="quicknav">
@@ -131,7 +131,8 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p> <a href="../../../en/case-studies/detail/15">JEEP</a> provided feedback on progress toward its main goal - achieving a specific reduction in electricity usage.</p> <p><a href="../../../en/case-studies/detail/9">Global Action Plan (GAP)</a> participants were provided with information on both individual and group progress toward achieving the program's objectives. These objectives included diversion of waste from landfill, and reductions in the use of electricity, natural gas, water and transportation fuel. <a href="../../../en/case-studies/detail/9">GAP</a> also publicized the amount of money that participants saved through their actions, because cost savings was one factor that motivated people totake action.</p></div>
+<p> <a href="../../../en/case-studies/detail/15">JEEP</a> provided feedback on progress toward its main goal - achieving a specific reduction in electricity usage.
+</p> <p><a href="../../../en/case-studies/detail/9">Global Action Plan (GAP)</a> participants were provided with information on both individual and group progress toward achieving the program's objectives. These objectives included diversion of waste from landfill, and reductions in the use of electricity, natural gas, water and transportation fuel. <a href="../../../en/case-studies/detail/9">GAP</a> also publicized the amount of money that participants saved through their actions, because cost savings was one factor that motivated people totake action.</p></div>
 <!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Your Program</h1>
@@ -142,14 +143,14 @@ theForm.elements[i].checked = status;
 <p class="indent"> Individual 	     Group</p>
 <p>3. </p>
 <p class="indent"> Individual 	     Group</p>
-<p>Also list the key factors that motivate people to do the activity. Feedback on thesefactors may be particularly relevant and inspiring to participants and those interested inbecoming involved.</p>
+<p>Also list the key factors that motivate people to do the activity. Feedback on these  factors may be particularly relevant and inspiring to participants and those interested in  becoming involved.</p>
 <p>1. </p>
 <p class="indent"> Individual         	 Group</p>
 <p>2. </p>
 <p class="indent"> Individual          Group</p>
 <p>3. </p>
 <p class="indent"> Individual          Group</p>
-<p>Check off those you can cost-effectively track on an individual basis and on a groupbasis.</p>
+<p>Check off those you can cost-effectively track on an individual basis and on a group  basis.</p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -160,7 +161,11 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p><a href="../../../en/case-studies/detail/15">JEEP</a>, BC21 PowerSmart and the Green Community programs (see <a href="../../../en/case-studies/detail/20">ReCAP</a>, <a href="../../../en/case-studies/detail/12">Guelph 2000</a>, <a href="../../../en/case-studies/detail/7">The Environment Network</a> and <a href="../../../en/case-studies/detail/18">Peterborough GreenUp</a>) provided the installation of energy and water conservation devices, to ensure that the devices would actually be installed, and installed properly.</p><p>	Information on what each group member had done between meetings was sent by <a href="../../../en/case-studies/detail/9">GAP</a>'s EcoTeams to a central and community database. There it was converted into resulting savings for each individual and fed back to the group at the end of the program.</p> <p> <em>Resource Alert for Canadians:</em> <br/>	The <a href="../../../en/case-studies/detail/115">EnerGuide for Houses</a> Program provides a second home visit, including blower door test, that confirms the benefits of actions taken and ensures that they were completed correctly.</p> <p><a href="../../../en/case-studies/detail/155">Sustainable Alberta</a> provided feedback on its website, and through prizes awarded directly to participants. Some participating individuals also received prizes from their employers. A party at the close of the event also allowed individuals to celebrate their participation in the event.</p>
+<p><a href="../../../en/case-studies/detail/15">JEEP</a>, BC21 PowerSmart and the Green Community programs (see <a href="../../../en/case-studies/detail/20">ReCAP</a>, <a href="../../../en/case-studies/detail/12">Guelph 2000</a>, <a href="../../../en/case-studies/detail/7">The Environment Network</a> and <a href="../../../en/case-studies/detail/18">Peterborough GreenUp</a>) provided the installation of energy and water conservation devices, to ensure that the devices would actually be installed, and installed properly.</p><p>
+	Information on what each group member had done between meetings was sent by <a href="../../../en/case-studies/detail/9">GAP</a>'s EcoTeams to a central and community database. There it was converted into resulting savings for each individual and fed back to the group at the end of the program.
+</p> <p> <em>Resource Alert for Canadians:</em> <br/>
+	The <a href="../../../en/case-studies/detail/115">EnerGuide for Houses</a> Program provides a second home visit, including blower door test, that confirms the benefits of actions taken and ensures that they were completed correctly.
+</p> <p><a href="../../../en/case-studies/detail/155">Sustainable Alberta</a> provided feedback on its website, and through prizes awarded directly to participants. Some participating individuals also received prizes from their employers. A party at the close of the event also allowed individuals to celebrate their participation in the event.</p>
 <p class="tip_example"><strong>Tip:</strong> Click on an image to enlarge it. Click your back button to return to this page.<br/>
 <a href="/images/documentimages/jeep/jeep-1.jpg"><img alt="JEEP image" border="0" height="92" src="/images/documentimages/jeep/jeep-1.jpg" width="149"/></a><br/>
     A JEEP home visit team examines utility bills to determine potential cost savings available to homeowners. Future bills will provide individual feedback.</p>
@@ -168,8 +173,8 @@ theForm.elements[i].checked = status;
 <!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Your Program</h1>
-<p>Which items (if any) that you identified in step 1 would be practical to report back to individuals?  	</p>
-<p>How might you provide this feedback?</p>
+<p>Which items (if any) that you identified in step 1 would be practical to report back to individuals?   	 </p>
+<p>How might you provide this feedback?  </p>
 <p></p>
 </div>
 <!--/plan_col_right--></div>
@@ -181,7 +186,10 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p>	Recognition for participants in <a href="../../../en/case-studies/detail/5">The Clean Air Commute</a> was provided through an awards ceremony for companies that earned the greatest number of points and through congratulatory newspaper ads which listed all participating companies.</p> <p><a href="../../../en/case-studies/detail/10">Go Boulder</a> arranged for an average of two stories each month in the local newspaper, featuring stories of individual success and community participation. Five video presentations were run repeatedly on the community television channel. Additional feedback was provided through promotional literature, special events, and presentations to community organizations.</p><p> <a href="../../../en/case-studies/detail/15">JEEP</a> used a large, compact-fluorescent light bulb sign placed in the centre of town to provide community feed back on kilowatts of power saved. Feedback was also provided through newspaper articles, advertisements and project reports.</p> <p><a href="../../../en/case-studies/detail/19">Quinte Regional Recycling</a> provided positive feedback to its citizens through radio spots, video presentations on local television stations, newspaper articles, and a yearly waste-reduction calendar. These featured stories about citizens and local businesses who participated effectively in the Blue Box 2000 program and made a difference in their community through their composting or recycling efforts.</p>
+<p>
+	Recognition for participants in <a href="../../../en/case-studies/detail/5">The Clean Air Commute</a> was provided through an awards ceremony for companies that earned the greatest number of points and through congratulatory newspaper ads which listed all participating companies.
+</p> <p><a href="../../../en/case-studies/detail/10">Go Boulder</a> arranged for an average of two stories each month in the local newspaper, featuring stories of individual success and community participation. Five video presentations were run repeatedly on the community television channel. Additional feedback was provided through promotional literature, special events, and presentations to community organizations.</p><p> <a href="../../../en/case-studies/detail/15">JEEP</a> used a large, compact-fluorescent light bulb sign placed in the centre of town to provide community feed back on kilowatts of power saved. Feedback was also provided through newspaper articles, advertisements and project reports.
+</p> <p><a href="../../../en/case-studies/detail/19">Quinte Regional Recycling</a> provided positive feedback to its citizens through radio spots, video presentations on local television stations, newspaper articles, and a yearly waste-reduction calendar. These featured stories about citizens and local businesses who participated effectively in the Blue Box 2000 program and made a difference in their community through their composting or recycling efforts.</p>
 <p class="tip_example"><strong>Tip:</strong> In general, stick to a few items to give community feedback.</p>
 <p class="tip_example"><strong>Tip:</strong> For tips on feedback that people will be more likely to notice, remember and act on, see the Tool <a href="../../../en/tools-of-change/communication">Vivid, Personalized Communication</a>.</p>
 <p class="tip_example"><strong>Tip:</strong> Click on an image to enlarge it. Click your back button to return to this page.<br/>
@@ -196,7 +204,7 @@ theForm.elements[i].checked = status;
 <p>2. </p>
 <p>3. </p>
 <p>How could you provide it?  <br/>
-signs tracking progress <br/>
+ signs tracking progress <br/>
  media  <br/>
  wall calendars  <br/>
  literature/newsletters  <br/>
