--- a/en/tools-of-change/norm-appeals/index.html
+++ b/en/tools-of-change/norm-appeals/index.html
@@ -78,7 +78,7 @@ theForm.elements[i].checked = status;
 <div id="header">
 <h1 id="logo" style="	background:transparent url(../../../public/images/logo_en.gif) no-repeat 0 0;">
 <a href="../../../en/home/" title="Tools of Change - Home">Tools- of Change</a>s
-					
+
 					</h1>
 <div id="qnav">
 <ul id="quicknav">
@@ -124,7 +124,7 @@ theForm.elements[i].checked = status;
 <!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Your Program</h1>
-<p>How can you make the activity as visible as possible?</p>
+<p>How can you make the activity as visible as possible?  </p>
 <p></p>
 </div>
 <!--/plan_col_right--></div>
@@ -136,7 +136,9 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p>	T-shirts, caps, and umbrellas with campaign logos increased the visibility of participation in <a href="../../../en/case-studies/detail/5">The Clean Air Commute</a>.</p> <p><a href="../../../en/case-studies/detail/6">Earth-Works</a> provided participating business establishments with door stickers advertising that they were active composters. This helped to reinforce composting as a community activity. They also provided residents with lawn signs.</p><p>When <a href="../../../en/case-studies/detail/20">ReCAP</a> teams were doing home visits they placed a sign on the resident's lawn to inform the neighbours.</p><p><a href="../../../en/case-studies/detail/19">Quinte Regional Recycling</a> put stickers on participants' Blue Boxes that read: "We Compost Too."</p>
+<p>
+	T-shirts, caps, and umbrellas with campaign logos increased the visibility of participation in <a href="../../../en/case-studies/detail/5">The Clean Air Commute</a>.
+</p> <p><a href="../../../en/case-studies/detail/6">Earth-Works</a> provided participating business establishments with door stickers advertising that they were active composters. This helped to reinforce composting as a community activity. They also provided residents with lawn signs.</p><p>When <a href="../../../en/case-studies/detail/20">ReCAP</a> teams were doing home visits they placed a sign on the resident's lawn to inform the neighbours.</p><p><a href="../../../en/case-studies/detail/19">Quinte Regional Recycling</a> put stickers on participants' Blue Boxes that read: "We Compost Too."</p>
 <p class="tip_example"><strong>Tip:</strong> This     is particularly important if the activity itself  cannot be made very visible.</p>
 <p class="tip_example"><strong>Tip:</strong> Click on an image to enlarge it. Click your back button to return to this page.<br/>
 <a href="/images/documentimages/EarthWorks/EarthWorks-3.jpg"><img alt="EarthWorks image" border="0" height="92" src="/images/documentimages/EarthWorks/EarthWorks-3.jpg" width="149"/></a><br/>
@@ -145,7 +147,7 @@ theForm.elements[i].checked = status;
 <!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Your Program</h1>
-<p>How might you make use of the following? </p>
+<p>How might you make use of the following?     </p>
 <p>Decals:</p>
 
 <p>Lawn, garden or window signs:</p>
@@ -163,7 +165,8 @@ theForm.elements[i].checked = status;
 <h1>Examples</h1>
 <p>At each EcoTeam meeting, participants of the <a href="../../../en/case-studies/detail/9">Global Action Plan</a> shared experiences and results from the previous month.</p>
 <p>GAP participants were prepared for the recruiting stage of the program during their introductory event when <a href="../../../en/case-studies/detail/9">GAP</a> was described as a program for developing sustainable lifestyles and then helping others to do the same. At the first EcoTeam meeting, participants were introduced to the recruiting process and then asked: "Are you up to attempting to create two more teams at the end of the program?"</p>
-<p>A 1996 study of recruiting in the U.S.A. found that 40 percent to 50 percent of individuals who were approached to attend an introductory event agreed to do so, and 85 percent of individuals who attended the introductory event joined EcoTeams.</p><p>People receiving home visits from <a href="../../../en/case-studies/detail/20">ReCAP</a> were urged, "If you were happy with the service you received, please tell others about it."</p><p>In the <a href="../../../en/case-studies/detail/622/">AIDS Peer Education Program</a>, presentations were performed by peers who were openly in favor of abstinence and condom use. This sent a powerful message to other teens that these choices were not only important but socially acceptable.</p><p> <a href="../../../en/case-studies/detail/34">Le Club Millezinc</a> trained older students to deliver presentations to younger students.</p> </div>
+<p>A 1996 study of recruiting in the U.S.A. found that 40 percent to 50 percent of individuals who were approached to attend an introductory event agreed to do so, and 85 percent of individuals who attended the introductory event joined EcoTeams.</p><p>People receiving home visits from <a href="../../../en/case-studies/detail/20">ReCAP</a> were urged, "If you were happy with the service you received, please tell others about it."</p><p>In the <a href="../../../en/case-studies/detail/622/">AIDS Peer Education Program</a>, presentations were performed by peers who were openly in favor of abstinence and condom use. This sent a powerful message to other teens that these choices were not only important but socially acceptable.</p><p> <a href="../../../en/case-studies/detail/34">Le Club Millezinc</a> trained older students to deliver presentations to younger students.
+</p> </div>
 <!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Your Program</h1>
@@ -178,13 +181,15 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p>The appeal that asked <a href="../../../en/case-studies/detail/4">Claremont</a> residents to recycle stated: "Over 80 percent of <a href="../../../en/case-studies/detail/4">Claremont</a>ers favour the city's recycling program."</p><p>	When employees arrived at work on the day of <a href="../../../en/case-studies/detail/5">The Clean Air Commute</a>, they marked the activity they undertook on a chart. Pollution Probe collected the charts and tabulated accumulated points. Recognition was later provided through an awards ceremony for companies that earned the greatest number of points and through congratulatory newspaper ads which listed all participating companies.</p> <p>During their home visits, <a href="../../../en/case-studies/detail/6">Earth-Works</a>' Compost Doctors pointed out how neighbours had overcome similar problems with their composters.</p><p><a href="../../../en/case-studies/detail/10">Go Boulder</a>, <a href="../../../en/case-studies/detail/15">JEEP</a>, <a href="../../../en/case-studies/detail/20">ReCAP</a> and <a href="../../../en/case-studies/detail/19">Quinte Regional Recycling</a> all illustrate the use of media stories that showed community members participating.</p>
+<p>The appeal that asked <a href="../../../en/case-studies/detail/4">Claremont</a> residents to recycle stated: "Over 80 percent of <a href="../../../en/case-studies/detail/4">Claremont</a>ers favour the city's recycling program."</p><p>
+	When employees arrived at work on the day of <a href="../../../en/case-studies/detail/5">The Clean Air Commute</a>, they marked the activity they undertook on a chart. Pollution Probe collected the charts and tabulated accumulated points. Recognition was later provided through an awards ceremony for companies that earned the greatest number of points and through congratulatory newspaper ads which listed all participating companies.
+</p> <p>During their home visits, <a href="../../../en/case-studies/detail/6">Earth-Works</a>' Compost Doctors pointed out how neighbours had overcome similar problems with their composters.</p><p><a href="../../../en/case-studies/detail/10">Go Boulder</a>, <a href="../../../en/case-studies/detail/15">JEEP</a>, <a href="../../../en/case-studies/detail/20">ReCAP</a> and <a href="../../../en/case-studies/detail/19">Quinte Regional Recycling</a> all illustrate the use of media stories that showed community members participating.</p>
 <p class="tip_example"><strong>Tip:</strong> Show     the involvement of appropriate "opinion leaders" - respected people in the     community that others will emulate, such as local heros, or business, spiritual or     political leaders.</p>
 </div>
 <!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Your Program</h1>
-<p>How could you make use of the following? </p>
+<p>How could you make use of the following?     </p>
 <ul>
 <li>media and other stories of people participating:  			<br/>
 </li>
