--- a/en/tools-of-change/obtaining-a-commitment/index.html
+++ b/en/tools-of-change/obtaining-a-commitment/index.html
@@ -78,7 +78,7 @@ theForm.elements[i].checked = status;
 <div id="header">
 <h1 id="logo" style="	background:transparent url(../../../public/images/logo_en.gif) no-repeat 0 0;">
 <a href="../../../en/home/" title="Tools of Change - Home">Tools- of Change</a>s
-					
+
 					</h1>
 <div id="qnav">
 <ul id="quicknav">
@@ -126,13 +126,14 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p> <a href="../../../en/case-studies/detail/5">The Clean Air Commute</a> was promoted through a month-long Clean Air Campaign, which raised awareness about the need for cleaner commuting practices.</p> <p><a href="../../../en/case-studies/detail/20">ReCAP</a>'s Home Advisors asked residents to accompany them as they conducted their home audits. They observed any reactions at each stage of the process, and involved residents in drawing up a list of repair/retrofit priorities at the end of the visit.</p><p>The <a href="../../../en/case-studies/detail/117">ABC / Count Me In!</a> programs led participants through a number of preparatory stagers before asking them to sign a pledge.</p><p><a href="../../../en/case-studies/detail/131">Aarhus</a> selected 175 people from among 1,700 drivers who volunteered to participate in its Bike Busters program.</p>
+<p> <a href="../../../en/case-studies/detail/5">The Clean Air Commute</a> was promoted through a month-long Clean Air Campaign, which raised awareness about the need for cleaner commuting practices.
+</p> <p><a href="../../../en/case-studies/detail/20">ReCAP</a>'s Home Advisors asked residents to accompany them as they conducted their home audits. They observed any reactions at each stage of the process, and involved residents in drawing up a list of repair/retrofit priorities at the end of the visit.</p><p>The <a href="../../../en/case-studies/detail/117">ABC / Count Me In!</a> programs led participants through a number of preparatory stagers before asking them to sign a pledge.</p><p><a href="../../../en/case-studies/detail/131">Aarhus</a> selected 175 people from among 1,700 drivers who volunteered to participate in its Bike Busters program.</p>
 <p class="tip_example"><strong>Tip:</strong> Research shows that this tool will not work if the person is not already motivated to do the action or feels pressured to commit.</p>
 </div>
 <!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Your Program</h1>
-<p>How will you assess whether people are motivated to do the activity?</p>
+<p>How will you assess whether people are motivated to do the activity?  </p>
 <p></p>
 </div>
 <!--/plan_col_right--></div>
@@ -144,7 +145,10 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p>	Companies participating in <a href="../../../en/case-studies/detail/5">The Clean Air Commute</a> enlisted motivated staff members to act as coordinators, who in turn became responsible for obtaining a commitment from fellow employees to participate.</p> <p>In <a href="../../../en/case-studies/detail/14">Iowa City</a>, participants who were told that their names would be published reduced their natural gas and electricity usage by 10 percent to 20 percent. No significant reduction occurred when participants were assured of anonymity.</p><p><a href="../../../en/case-studies/detail/20">ReCAP</a> asked residents to commit orally to carrying out the list of repair/retrofit priorities they had helped prepare.</p><p> <a href="../../../en/case-studies/detail/36">The Roach Coach Project</a> asked participants to make a verbal commitment to complete all aspects of the eight-month pilot.</p>
+<p>
+	Companies participating in <a href="../../../en/case-studies/detail/5">The Clean Air Commute</a> enlisted motivated staff members to act as coordinators, who in turn became responsible for obtaining a commitment from fellow employees to participate.
+</p> <p>In <a href="../../../en/case-studies/detail/14">Iowa City</a>, participants who were told that their names would be published reduced their natural gas and electricity usage by 10 percent to 20 percent. No significant reduction occurred when participants were assured of anonymity.</p><p><a href="../../../en/case-studies/detail/20">ReCAP</a> asked residents to commit orally to carrying out the list of repair/retrofit priorities they had helped prepare.</p><p> <a href="../../../en/case-studies/detail/36">The Roach Coach Project</a> asked participants to make a verbal commitment to complete all aspects of the eight-month pilot.
+</p>
 <p class="tip_example"><strong>Tip:</strong> Research suggests that written pledges are likely to have a more lasting effect than oral     ones.</p>
 <p class="tip_example"><strong>Tip:</strong> Anonymous, private pledges (private commitments) have been shown to be less     effective than those shared with others (public commitments).</p>
 </div>
@@ -168,15 +172,16 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p> <a href="../../../en/case-studies/detail/5">The Clean Air Commute</a> piloted a program targeted at people who had previously participated.</p> <p>The <a href="../../../en/case-studies/detail/22">Toxic Challenge</a> and <a href="../../../en/case-studies/detail/24">We're Toxic Free</a> first asked people to fill out a reportcard/questionnaire. Once this had been done, they asked the residents to agree to reduce their use of toxics.</p><p><a href="../../../en/case-studies/detail/164">Waterloo's Pesticide Action Group</a> first asked for and were granted a series of meetings with city staffers and council. Next, they convinced the City of Waterloo to establish a task force to look into alternatives to pesticide spraying and to determine what those alternatives would cost. Finally, some of the task forces recommendations were incorporated into the city's Plant Health Care Program.</p>
+<p> <a href="../../../en/case-studies/detail/5">The Clean Air Commute</a> piloted a program targeted at people who had previously participated.
+</p> <p>The <a href="../../../en/case-studies/detail/22">Toxic Challenge</a> and <a href="../../../en/case-studies/detail/24">We're Toxic Free</a> first asked people to fill out a reportcard/questionnaire. Once this had been done, they asked the residents to agree to reduce their use of toxics.</p><p><a href="../../../en/case-studies/detail/164">Waterloo's Pesticide Action Group</a> first asked for and were granted a series of meetings with city staffers and council. Next, they convinced the City of Waterloo to establish a task force to look into alternatives to pesticide spraying and to determine what those alternatives would cost. Finally, some of the task forces recommendations were incorporated into the city's Plant Health Care Program.</p>
 <p class="tip_example"><strong>Tip:</strong> It has     been shown that agreeing to a small request can lead people to agree later to much larger     ones.</p>
 </div>
 <!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Your Program</h1>
-<p>How might you lead people through a number of increasingly demanding    agreements? 	</p>
+<p>How might you lead people through a number of increasingly demanding      agreements?  	 </p>
 <p></p>
-<p class="tip_example"><strong>Tip:</strong> It has    been shown that agreeing to a small request can lead people to agree later to much larger    ones.</p>
+<p class="tip_example"><strong>Tip:</strong> It has      been shown that agreeing to a small request can lead people to agree later to much larger      ones.</p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
