--- a/en/tools-of-change/school-programs/index.html
+++ b/en/tools-of-change/school-programs/index.html
@@ -78,7 +78,7 @@ theForm.elements[i].checked = status;
 <div id="header">
 <h1 id="logo" style="	background:transparent url(../../../public/images/logo_en.gif) no-repeat 0 0;">
 <a href="../../../en/home/" title="Tools of Change - Home">Tools- of Change</a>s
-					
+
 					</h1>
 <div id="qnav">
 <ul id="quicknav">
@@ -127,7 +127,8 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p>Lack of family support arising from safety concerns was found to be the major barrier to children riding to and from school. Lochside School's <a href="../../../en/case-studies/detail/3">Bike Smarts</a> program therefore focused on bicycle safety, kept parents informed, and encouraged them to participate and see the skills their children were acquiring.</p><p>To help parents comply with their litterless lunch program, <a href="../../../en/case-studies/detail/16">Norway</a> Public School sold subsidized reusable lunch bags containing reusable food containers.</p><p> <a href="../../../en/case-studies/detail/97">Greenest City</a> found that child safety issues were a key barrier to getting children to walk and cycle to school, due to an increase in traffic injuries and fatalities as well as threats of bullying, harassment and abduction. Their program focused on ways of addressing these safety issues.</p> </div>
+<p>Lack of family support arising from safety concerns was found to be the major barrier to children riding to and from school. Lochside School's <a href="../../../en/case-studies/detail/3">Bike Smarts</a> program therefore focused on bicycle safety, kept parents informed, and encouraged them to participate and see the skills their children were acquiring.</p><p>To help parents comply with their litterless lunch program, <a href="../../../en/case-studies/detail/16">Norway</a> Public School sold subsidized reusable lunch bags containing reusable food containers.</p><p> <a href="../../../en/case-studies/detail/97">Greenest City</a> found that child safety issues were a key barrier to getting children to walk and cycle to school, due to an increase in traffic injuries and fatalities as well as threats of bullying, harassment and abduction. Their program focused on ways of addressing these safety issues.
+</p> </div>
 <!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Your Program</h1>
@@ -142,12 +143,14 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p><a href="../../../en/case-studies/detail/3">Bike Smarts</a> provided in-class instruction on riding safety. To complete the program, the students were required to pass both a written test and an "on-bike" cycling skills test.</p><p> <a href="../../../en/case-studies/detail/97">Greenest City</a>s Blazing Trails Through the Urban Jungle was a classroom mapping activity that complemented the Ontario school board curriculum in social studies, mathematics, and science. By mapping street names, landmarks, and safe places, for example, children felt safer and more confident traveling in their community.</p> <p> <a href="../../../en/case-studies/detail/145">Auto$mart</a> implemented a Student Driver Program to teach energy-efficient driving habits to novice drivers through existing driver education programs. Most of the habits being promoted also contributed to safer driving, so the messages were consistent with existing driver education curriculums.</p> <a href="../../../en/case-studies/detail/176/">Working Towards Peace </a>
+<p><a href="../../../en/case-studies/detail/3">Bike Smarts</a> provided in-class instruction on riding safety. To complete the program, the students were required to pass both a written test and an "on-bike" cycling skills test.</p><p> <a href="../../../en/case-studies/detail/97">Greenest City</a>s Blazing Trails Through the Urban Jungle was a classroom mapping activity that complemented the Ontario school board curriculum in social studies, mathematics, and science. By mapping street names, landmarks, and safe places, for example, children felt safer and more confident traveling in their community.
+</p> <p> <a href="../../../en/case-studies/detail/145">Auto$mart</a> implemented a Student Driver Program to teach energy-efficient driving habits to novice drivers through existing driver education programs. Most of the habits being promoted also contributed to safer driving, so the messages were consistent with existing driver education curriculums.
+</p> <a href="../../../en/case-studies/detail/176/">Working Towards Peace </a>
  developed an extensive curriculum accompanied by skills sessions and multi-disciplinary extensions for the classroom.</div>
 <!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Your Program</h1>
-<p>How do the activities being promoted fit into the school curriculum? Outline possible in-class activities and the time required for each.</p>
+<p>How do the activities being promoted fit into the school curriculum? Outline possible in-class activities and the time required for each.  </p>
 <p></p>
 </div>
 <!--/plan_col_right--></div>
@@ -159,11 +162,12 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p>Participants in Lochside School's <a href="../../../en/case-studies/detail/3">Bike Smarts</a> program took part in five neighbourhood trips and one longer field trip, during which they practised their cycling skills.</p><p><a href="../../../en/case-studies/detail/16">Norway</a> Public School had volunteer lunch room monitors remind other students to separate compostable scraps and recyclables and to place them in collection bins.</p><p> <a href="../../../en/case-studies/detail/97">Greenest City</a>s Walking and Cycling School Buses enabled parents to provide children with personal assistance and supervision.</p> <p>Students were able to practice skills they learned in  <a href="../../../en/case-studies/detail/176/">Working Towards Peace</a> though: role-playing, skits, creative writing, games, and group activities.</p></div>
+<p>Participants in Lochside School's <a href="../../../en/case-studies/detail/3">Bike Smarts</a> program took part in five neighbourhood trips and one longer field trip, during which they practised their cycling skills.</p><p><a href="../../../en/case-studies/detail/16">Norway</a> Public School had volunteer lunch room monitors remind other students to separate compostable scraps and recyclables and to place them in collection bins.</p><p> <a href="../../../en/case-studies/detail/97">Greenest City</a>s Walking and Cycling School Buses enabled parents to provide children with personal assistance and supervision.
+</p> <p>Students were able to practice skills they learned in  <a href="../../../en/case-studies/detail/176/">Working Towards Peace</a> though: role-playing, skits, creative writing, games, and group activities.</p></div>
 <!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Your Program</h1>
-<p>What supervised practice opportunities can you provide?</p>
+<p>What supervised practice opportunities can you provide?  </p>
 <p></p>
 </div>
 <!--/plan_col_right--></div>
@@ -179,7 +183,7 @@ theForm.elements[i].checked = status;
 <!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Your Program</h1>
-<p>How can you encourage home practice of the actions?</p>
+<p>How can you encourage home practice of the actions?  </p>
 <p></p>
 </div>
 <!--/plan_col_right--></div>
@@ -193,16 +197,17 @@ theForm.elements[i].checked = status;
 <h1>Examples</h1>
 <p><a href="../../../en/case-studies/detail/3">Bike Smarts</a> strongly encouraged parental participation in its neighbourhood outings and field trip. As a direct result of the program, 4 of the 16 parents cycled at least 20 percent more than they used to.</p><p><a href="../../../en/case-studies/detail/13">In Concert with the Environment</a> required students to question each member of their households about energy use. The resulting data were brought to school and analyzed.</p>
 <p><a href="../../../en/case-studies/detail/13">In Concert with the Environment</a> coached each student on drawing up a plan of action with his or her household to save energy at home. Once completed, it was signed by both the student and the head of the household.</p><p><a href="../../../en/case-studies/detail/25">Whitney Public School</a> asked parents to monitor their children's recycling efforts, to help their children count the number of items recycled during a week, and to indicate if their children had satisfactorily completed an assignment. To participate actively, the parents needed to read a recycling flyer from the local public works department.</p>
-<p>The students at <a href="../../../en/case-studies/detail/25">Whitney Public School</a> took over their homes' recycling activities for a week. This enabled them to see where improvements could be made by the household and encouraged them to promote these changes in their homes.</p><p> <a href="../../../en/case-studies/detail/97">Greenest City</a>s active transportation program required participation by a sufficient number of families in participating communities.</p> </div>
+<p>The students at <a href="../../../en/case-studies/detail/25">Whitney Public School</a> took over their homes' recycling activities for a week. This enabled them to see where improvements could be made by the household and encouraged them to promote these changes in their homes.</p><p> <a href="../../../en/case-studies/detail/97">Greenest City</a>s active transportation program required participation by a sufficient number of families in participating communities.
+</p> </div>
 <!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Your Program</h1>
-<p>How might you involve other members of the family? </p>
-<p> involve parents in practising/doing the activity with the students </p>
-<p> have parents check students achievements </p>
-<p> have students collect data from their families </p>
-<p> have students assume household responsibilities that will affect others in their homes  (e.g., recycling)  </p>
-<p> ask the entire family to make a commitment to participate (see the Tool <a href="../../../en/tools-of-change/obtaining-a-commitment/">Obtaining a Commitment</a>)  </p>
+<p>How might you involve other members of the family?   </p>
+<p> involve parents in practising/doing the activity with the students   </p>
+<p> have parents check students achievements   </p>
+<p> have students collect data from their families   </p>
+<p> have students assume household responsibilities that will affect others in their homes  (e.g., recycling)     </p>
+<p> ask the entire family to make a commitment to participate (see the Tool <a href="../../../en/tools-of-change/obtaining-a-commitment/">Obtaining a Commitment</a>)     </p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -213,11 +218,14 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p>	Lochside School's program (<a href="../../../en/case-studies/detail/3">Bike Smarts</a>) had participants record the distances biked.</p> <p>Students at <a href="../../../en/case-studies/detail/25">Whitney Public School</a> weighed or counted the amount of each type of material they recycled and plotted the information on a graph.</p><p><a href="../../../en/case-studies/detail/9">Global Action Plan (GAP)</a> provided a place in the workbook for participants to record the actions they had taken at home.</p><p> <a href="../../../en/case-studies/detail/97">Greenest City</a> asked each participating school to report on the number of children involved in each activity, and the average distance travelled by participants to school.</p> </div>
+<p>
+	Lochside School's program (<a href="../../../en/case-studies/detail/3">Bike Smarts</a>) had participants record the distances biked.
+</p> <p>Students at <a href="../../../en/case-studies/detail/25">Whitney Public School</a> weighed or counted the amount of each type of material they recycled and plotted the information on a graph.</p><p><a href="../../../en/case-studies/detail/9">Global Action Plan (GAP)</a> provided a place in the workbook for participants to record the actions they had taken at home.</p><p> <a href="../../../en/case-studies/detail/97">Greenest City</a> asked each participating school to report on the number of children involved in each activity, and the average distance travelled by participants to school.
+</p> </div>
 <!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Your Program</h1>
-<p>Specify the methods you will provide for students to record their actions. 	</p>
+<p>Specify the methods you will provide for students to record their actions.  	 </p>
 <p></p>
 </div>
 <!--/plan_col_right--></div>
@@ -229,11 +237,12 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p>Lochside School's program offered three key motivators: an attractive end-of-program field trip, an opportunity for students to get out of school, and stickers for completion of each part of the <a href="../../../en/case-studies/detail/3">Bike Smarts</a> Program.</p><p>The United Nations Environmental Program (UNEP) provides a "Global Hero Award Program" to motivate children participating in <a href="../../../en/case-studies/detail/9">GAP's</a> Journey for the Planet. This program acknowledges children's success stories, and provides certificates and patches for completing a certain number of the actions promoted.</p><p> <a href="../../../en/case-studies/detail/122"><strong>Off ramp</strong></a> successfully used small incentives such as water bottles, stickers and buttons for those switching to new forms of transportation. One day at Terry Fox Secondary School, free hot chocolate was given out to all students and teachers who walked to school. At another school, bike safety packages were given out as prizes, to encourage bike use.</p> </div>
+<p>Lochside School's program offered three key motivators: an attractive end-of-program field trip, an opportunity for students to get out of school, and stickers for completion of each part of the <a href="../../../en/case-studies/detail/3">Bike Smarts</a> Program.</p><p>The United Nations Environmental Program (UNEP) provides a "Global Hero Award Program" to motivate children participating in <a href="../../../en/case-studies/detail/9">GAP's</a> Journey for the Planet. This program acknowledges children's success stories, and provides certificates and patches for completing a certain number of the actions promoted.</p><p> <a href="../../../en/case-studies/detail/122"><strong>Off ramp</strong></a> successfully used small incentives such as water bottles, stickers and buttons for those switching to new forms of transportation. One day at Terry Fox Secondary School, free hot chocolate was given out to all students and teachers who walked to school. At another school, bike safety packages were given out as prizes, to encourage bike use.
+</p> </div>
 <!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Your Program</h1>
-<p>How could you do this? Follow the procedure outlined in the Tool <a href="../../../en/tools-of-change/financial-incentives-and-disincentives/">Financial Incentives and    Disincentives</a>.</p>
+<p>How could you do this? Follow the procedure outlined in the Tool   <a href="../../../en/tools-of-change/financial-incentives-and-disincentives/">Financial Incentives and      Disincentives</a>.  </p>
 <p></p>
 </div>
 <!--/plan_col_right--></div>
@@ -245,11 +254,15 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p>As Lochside School's <a href="../../../en/case-studies/detail/3">Bike Smarts</a> students learned safety skills, they were awarded achievement stickers and were given a certificate on completion of the program.</p><p>Using home energy use data collected by each student, <a href="../../../en/case-studies/detail/13">In Concert with the Environment</a> provided participating households with personalized computer reports with suggestions for improvement.</p><p>	Providing feedback was an essential part of the <a href="../../../en/case-studies/detail/135">Way To Go!</a> approach. Way To Go!s success depended on the participation of families - and these families needed to know that their actions were making a difference. Schools generally provided feedback directly to students, staff, teachers, parents and principals through school newsletters, bulletin-board postings and by walking from class to class to disseminate information.</p> <p>	The <a href="../../../en/case-studies/detail/122"><strong>off ramp</strong></a> group at each school created posters showing their survey results and a comparison with the baseline survey results. They also advertised the results through school newsletters and flyers.</p> </div>
+<p>As Lochside School's <a href="../../../en/case-studies/detail/3">Bike Smarts</a> students learned safety skills, they were awarded achievement stickers and were given a certificate on completion of the program.</p><p>Using home energy use data collected by each student, <a href="../../../en/case-studies/detail/13">In Concert with the Environment</a> provided participating households with personalized computer reports with suggestions for improvement.</p><p>
+	Providing feedback was an essential part of the <a href="../../../en/case-studies/detail/135">Way To Go!</a> approach. Way To Go!s success depended on the participation of families - and these families needed to know that their actions were making a difference. Schools generally provided feedback directly to students, staff, teachers, parents and principals through school newsletters, bulletin-board postings and by walking from class to class to disseminate information.
+</p> <p>
+	The <a href="../../../en/case-studies/detail/122"><strong>off ramp</strong></a> group at each school created posters showing their survey results and a comparison with the baseline survey results. They also advertised the results through school newsletters and flyers.
+</p> </div>
 <!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Your Program</h1>
-<p>List the possibilities for providing feedback for your own program. See    the Tool <a href="../../../en/tools-of-change/feedback/">Feedback</a>.</p>
+<p>List the possibilities for providing feedback for your own program. See      the Tool <a href="../../../en/tools-of-change/feedback/">Feedback</a>.  </p>
 <p></p>
 </div>
 <!--/plan_col_right--></div>
